--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@storybook/addon-actions": "^6.4.0-beta.12",
+    "@storybook/addon-essentials": "^6.4.0-beta.12",
+    "@storybook/addon-links": "^6.4.0-beta.12",
+    "@storybook/react": "^6.4.0-beta.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "babel-loader": "^8.2.2",
+    "sass": "^1.43.2",
+    "storybook-builder-vite": "^0.1.2",
     "typescript": "^4.3.2",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^2.6.4"
   }
 }
